--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:label="DoneDone"
+        android:theme="@style/DoneDoneTheme"
         tools:ignore="MissingApplicationIcon">
 
         <activity
