waffle 리소스 및 Theme 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:label="DoneDone"
-        android:theme="@style/DoneDoneTheme"
+        android:theme="@style/WaffleTheme"
         tools:ignore="MissingApplicationIcon">
 
         <activity
