--- a/waffle/preview/src/main/AndroidManifest.xml
+++ b/waffle/preview/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Designed and developed by DoneDone Team 2023.
   ~
   ~ Licensed under the MIT.
@@ -23,7 +24,9 @@
             </intent-filter>
 
         </activity>
-
+        <activity
+            android:name=".button.WaffleButtonActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
