WaffleCountView preview 추가

--- a/waffle/preview/src/main/AndroidManifest.xml
+++ b/waffle/preview/src/main/AndroidManifest.xml
@@ -26,8 +26,12 @@
         </activity>
         <activity
             android:name=".button.WaffleButtonActivity"
-            android:label="Waffle Button Activity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Waffle Button Activity" />
+        <activity
+            android:name=".textinput.WaffleCountViewActivity"
+            android:exported="false"
+            android:label="Waffle TextLengthInfo Activity" />
     </application>
 
 </manifest>
