--- a/waffle/src/main/AndroidManifest.xml
+++ b/waffle/src/main/AndroidManifest.xml
@@ -5,14 +5,6 @@
   ~ Licensed under the MIT.
   ~ Please see full license: https://github.com/TodayDoneDone/donedone-android/blob/main/LICENSE
   -->
-
-<!--
-  ~ Designed and developed by DoneDone Team 2023.
-  ~
-  ~ Licensed under the MIT.
-  ~ Please see full license: https://github.com/TodayDoneDone/donedone-android/blob/main/LICENSE
-  -->
-
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest>
 
 </manifest>
